--- a/img/index.html
+++ b/img/index.html
@@ -14,7 +14,7 @@
 <body>
     <nav id="navbar">
         <div id="logo">
-            <img width="48" height="48" src="/logo.png" alt="myFood.com">
+            <img width="48" height="48" src="logo.png" alt="myFood.com">
         </div>
         <ul>
             <li class="item"><a href="#home">Home</a></li>
